--- a/templates/login.html
+++ b/templates/login.html
@@ -10,10 +10,10 @@
 <body>
     <div class="container">
         <div class="card card-container">
-            <h1 class="text-center">Login</h1>
-            {% if user_agent %}
+            <h1>Login</h1>
+            {% if error %}
             <div class="alert alert-danger" role="alert">
-                {{ user_agent }}
+                {{ error }}
             </div>
             {% endif %}
             <form class="form-signin" action="/login" method="post">
@@ -26,10 +26,10 @@
                     <input type="password" class="form-control" id="password" name="password" required>
                 </div>
                 <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Login</button>
-            </form><!-- /form -->
-            <p class="text-center mt-3 mb-0"><a href="/signup">Don't have an account? Sign up</a></p>
-        </div><!-- /card-container -->
-    </div><!-- /container -->
+            </form>
+            <p class="mt-3 mb-0"><a href="/signup">Don't have an account? Sign up</a></p>
+        </div>
+    </div>
 
     <script src="{{ url_for('static', path='/js/bootstrap.min.js') }}"></script>
 </body>
