--- a/templates/manage.html
+++ b/templates/manage.html
@@ -2,31 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Manage Models</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', path='/css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', path='/css/style.css') }}">
 </head>
 <body>
-  <div class="container">
-    <h1>Models</h1>
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th>Models</th>
-          <th>Action</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for model in models %}
-          <tr>
-            <td>{{ model }}</td>
-            <td><a href="/delete/{{ model }}">Remove</a></td>
-          </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-  </div>
-  <script src="{{ url_for('static', path='/js/bootstrap.min.js') }}"></script>
+    <div class="container">
+        <h1 class="text-center my-4">Models</h1>
+        <div class="table-responsive">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>Models</th>
+                <th>Action</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for model in models %}
+              <tr>
+                <td>{{ model }}</td>
+                <td class="text-end">
+                  <form action="/delete/{{ model }}" method="get">
+                    <button class="btn btn-danger" type="submit">Remove</button>
+                  </form>
+                </td>
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+        </div>
+        <div class="text-center mt-3">
+            <a href="/dashboard" class="btn btn-secondary">Back</a>
+        </div>
+    </div>
+    <script src="{{ url_for('static', path='/js/bootstrap.min.js') }}"></script>
 </body>
 </html>
